--- a/assetTracking/package.json
+++ b/assetTracking/package.json
@@ -30,7 +30,8 @@
     "babel-preset-stage-3": "6.24.1",
     "babel-register": "6.26.0",
     "ethereumjs-testrpc": "4.1.1",
-    "truffle": "4.0.1"
+    "truffle": "4.0.1",
+    "truffle-test-utils": "^0.1.0"
   },
   "devDependencies": {
     "sol-merger": "0.1.2"
