--- a/assetVerification/package.json
+++ b/assetVerification/package.json
@@ -34,7 +34,8 @@
     "ethereumjs-testrpc": "4.1.1",
     "truffle": "4.0.1",
     "truffle-hdwallet-provider": "0.0.6",
-    "web3": "^1.0.0-beta.36"
+    "web3": "^1.0.0-beta.36",
+    "zeppelin-solidity": "^1.12.0"
   },
   "devDependencies": {
     "sol-merger": "0.1.2"
